// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectSchema denormalization denormalizes an object 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 1`] = `
[
  {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 2`] = `
[
  {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object that contains a property representing a an object with an id of zero 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "0",
      "name": "Chancho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes an object with plain members 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Nacho",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 1`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 2`] = `
[
  {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 3`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  false,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 4`] = `
[
  {
    "tacos": {},
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 5`] = `
[
  {
    "tacos": {},
    "user": User {
      "id": "1",
      "name": "Jane",
    },
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization denormalizes plain object shorthand 6`] = `
[
  Immutable.Map {
    "user": User {
      "id": "1",
      "name": "Jane",
    },
    "tacos": Immutable.Map {},
  },
  true,
  false,
]
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 1`] = `
{
  "item": null,
}
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 2`] = `
{
  "item": null,
}
`;

exports[`ObjectSchema denormalization should have found = true with null member even when schema has nested entity 3`] = `
Immutable.Map {
  "item": null,
}
`;

exports[`ObjectSchema normalization filters out undefined and null values 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "bar": "1",
  },
}
`;

exports[`ObjectSchema normalization normalizes an object 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "user": "1",
  },
}
`;

exports[`ObjectSchema normalization normalizes plain objects as shorthand for ObjectSchema 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "user": "1",
  },
}
`;

exports[`ObjectSchema normalization should deserialize Date 1`] = `
{
  "entities": {
    "User": {
      "5": {
        "id": "5",
      },
    },
  },
  "entityMeta": {
    "User": {
      "5": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "createdAt": 2020-06-07T02:00:15.000Z,
    "nextPage": "blob",
    "user": "5",
  },
}
`;

exports[`ObjectSchema normalization should pass over when Date not provided 1`] = `
{
  "entities": {
    "User": {
      "5": {
        "id": "5",
      },
    },
  },
  "entityMeta": {
    "User": {
      "5": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "nextPage": "blob",
    "user": "5",
  },
}
`;
